fixing proj spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1414,10 +1414,10 @@
 	body, input, select, textarea {
 		color: #fff;
 		font-family: "Open Sans", Helvetica, sans-serif;
-		font-size: 15pt;
+		font-size: 12pt;
 		font-weight: 400;
 		letter-spacing: 0.075em;
-		line-height: 1.65em;
+		line-height: .5em;
 	}
 
 		@media screen and (max-width: 1680px) {
